postgres/k8s-pg-adapter-dep.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pg-adapter
  labels:
    app: pg-adapter
  namespace: default
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: pg-adapter
  template:
    metadata:
      name: pg-adapter
      labels:
        app: pg-adapter
    spec:
      containers:
      - name: pg-adapter
        image: timescale/prometheus-postgresql-adapter:0.6.0
        args:
          - "-pg-host=pgprometheus"
          - "-pg-user=postgres"
          - "-pg-password=mypassword"
          - "-pg-prometheus-log-samples=true"
        ports:
          - name: pgadapter-http
            containerPort: 9201
