postgres/istio-adaptor-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: postgres-adaptor-external
spec:
  hosts:
  - 35.232.79.44
  ports:
  - number: 9201 
    name: http
    protocol: HTTP
